Nav fixes, experiment
* Bugfix: move panels container and current panel to (0,0,0)
  after load a panel, so input focus work well
* Experiment: panels navigation with CSS transitions

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
-/* line 17, ../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+@charset "utf-8";
+/* line 17, ../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -15,50 +16,50 @@ time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
-  font: inherit;
   font-size: 100%;
+  font: inherit;
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-html {
+/* line 20, ../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+body {
   line-height: 1;
 }
 
-/* line 24, ../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 101, ../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 114, ../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block;
 }
@@ -69,19 +70,23 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
  * Useful for the padding does not change the height of the elements
  *
  */
-/* line 7, ../_source/css/sass/_mootor.nav.scss */
+/* line 7, src/_mootor/_mootor.nav.scss */
 * {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-/* line 15, ../_source/css/sass/_mootor.nav.scss */
-body {
+/* line 15, src/_mootor/_mootor.nav.scss */
+body, html {
   height: 100%;
+  background: #ff0000;
+  overflow-x: hidden;
+  max-width: 100%;
+  width: 100%;
 }
 
-/* line 21, ../_source/css/sass/_mootor.nav.scss */
+/* line 25, src/_mootor/_mootor.nav.scss */
 .moo-header {
   text-align: left;
   z-index: 9999;
@@ -90,13 +95,13 @@ body {
   width: 100%;
   padding: 1em 1em;
 }
-/* line 28, ../_source/css/sass/_mootor.nav.scss */
+/* line 32, src/_mootor/_mootor.nav.scss */
 .moo-header nav {
   position: absolute;
   margin-top: 0;
   top: 1.6em;
 }
-/* line 33, ../_source/css/sass/_mootor.nav.scss */
+/* line 37, src/_mootor/_mootor.nav.scss */
 .moo-header nav a {
   padding: .5em 1em;
   width: auto;
@@ -104,26 +109,30 @@ body {
   font-size: 1.5em;
 }
 
-/* line 43, ../_source/css/sass/_mootor.nav.scss */
+/* line 47, src/_mootor/_mootor.nav.scss */
 #panels {
   position: absolute;
   width: 100%;
   left: 0;
   min-height: 100%;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: #0000ff;
 }
-/* line 48, ../_source/css/sass/_mootor.nav.scss */
+/* line 58, src/_mootor/_mootor.nav.scss */
 #panels .moo-panel {
   min-height: 100%;
   width: 100%;
   position: absolute;
 }
 
-/* line 60, ../_source/css/sass/_mootor.nav.scss */
+/* line 70, src/_mootor/_mootor.nav.scss */
 nav ul,
 nav ol {
   list-style: none;
 }
-/* line 64, ../_source/css/sass/_mootor.nav.scss */
+/* line 74, src/_mootor/_mootor.nav.scss */
 nav a {
   text-decoration: none;
   text-align: left;
@@ -131,20 +140,20 @@ nav a {
   padding: 1em;
 }
 
-/* line 74, ../_source/css/sass/_mootor.nav.scss */
+/* line 84, src/_mootor/_mootor.nav.scss */
 #panels .moo-panel {
   -webkit-transition-duration: 0;
   -webkit-transform: translate3d(0, 0, 0);
 }
 
-/* line 82, ../_source/css/sass/_mootor.nav.scss */
+/* line 92, src/_mootor/_mootor.nav.scss */
 a,
 a:hover,
 a:focus {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
-/* line 4, ../_source/css/sass/_mootor.ui.scss */
+/* line 4, src/_mootor/_mootor.ui.scss */
 .moo-ui-form {
   text-align: left;
   width: 90%;
@@ -153,17 +162,17 @@ a:focus {
   border: 1px solid #CCC;
   border-radius: 5px;
 }
-/* line 13, ../_source/css/sass/_mootor.ui.scss */
+/* line 13, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-field {
   display: block;
   padding: 1em 2em;
   border-top: 1px solid #CCC;
 }
-/* line 19, ../_source/css/sass/_mootor.ui.scss */
+/* line 19, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-field:first-child {
   border-top: none;
 }
-/* line 20, ../_source/css/sass/_mootor.ui.scss */
+/* line 20, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-field > label, .moo-ui-form .moo-field legend {
   display: inline;
   float: left;
@@ -171,7 +180,7 @@ a:focus {
   font-weight: 700;
   width: 25%;
 }
-/* line 27, ../_source/css/sass/_mootor.ui.scss */
+/* line 27, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-text {
   display: inline;
   float: right;
@@ -182,7 +191,7 @@ a:focus {
   padding: 0.25em 2.25em 0.25em 0.25em;
   width: 75%;
 }
-/* line 35, ../_source/css/sass/_mootor.ui.scss */
+/* line 35, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-text input {
   -webkit-appearance: none;
   /* Remove default iOS shadow */
@@ -192,7 +201,7 @@ a:focus {
   line-height: 1.5em;
   width: 100%;
 }
-/* line 44, ../_source/css/sass/_mootor.ui.scss */
+/* line 44, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-textarea {
   display: inline;
   float: right;
@@ -203,7 +212,7 @@ a:focus {
   padding: 0.25em;
   width: 75%;
 }
-/* line 52, ../_source/css/sass/_mootor.ui.scss */
+/* line 52, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-textarea textarea {
   -webkit-appearance: none;
   /* Remove default iOS shadow */
@@ -213,7 +222,7 @@ a:focus {
   line-height: 1.5em;
   width: 100%;
 }
-/* line 62, ../_source/css/sass/_mootor.ui.scss */
+/* line 62, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container {
   display: inline;
   float: right;
@@ -225,7 +234,7 @@ a:focus {
   width: 75%;
   height: 3em;
 }
-/* line 71, ../_source/css/sass/_mootor.ui.scss */
+/* line 71, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container .moo-ui-select-link {
   color: #000;
   font-size: 1.25em;
@@ -239,7 +248,7 @@ a:focus {
   right: 0;
   z-index: 10;
 }
-/* line 83, ../_source/css/sass/_mootor.ui.scss */
+/* line 83, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container .moo-ui-select-link:after {
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(100%, #cccccc));
   background: -webkit-linear-gradient(top, #ffffff, #cccccc);
@@ -261,34 +270,34 @@ a:focus {
   height: 2.25em;
   z-index: -1;
 }
-/* line 101, ../_source/css/sass/_mootor.ui.scss */
+/* line 101, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container .moo-ui-select-menu {
   background-color: #999;
   border-radius: 5px;
   padding: 1em;
   position: absolute;
 }
-/* line 107, ../_source/css/sass/_mootor.ui.scss */
+/* line 107, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container .moo-ui-select-list {
   font-size: 2em;
   background: #FFF;
   border-radius: 5px;
   overflow: auto;
 }
-/* line 113, ../_source/css/sass/_mootor.ui.scss */
+/* line 113, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container .moo-ui-select-list li {
   padding: 1em;
   border-bottom: 1px solid #CCC;
 }
-/* line 116, ../_source/css/sass/_mootor.ui.scss */
+/* line 116, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container .moo-ui-select-list li:last-child {
   border: none;
 }
-/* line 120, ../_source/css/sass/_mootor.ui.scss */
+/* line 120, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container.bottom .moo-ui-select-menu {
   top: 4.5em;
 }
-/* line 122, ../_source/css/sass/_mootor.ui.scss */
+/* line 122, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container.bottom .moo-ui-select-menu:before {
   content: "";
   display: block;
@@ -300,11 +309,11 @@ a:focus {
   border-right: 20px solid transparent;
   border-bottom: 15px solid #999;
 }
-/* line 136, ../_source/css/sass/_mootor.ui.scss */
+/* line 136, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container.top .moo-ui-select-menu {
   bottom: 4.5em;
 }
-/* line 138, ../_source/css/sass/_mootor.ui.scss */
+/* line 138, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container.top .moo-ui-select-menu:after {
   content: "";
   display: block;
@@ -316,7 +325,7 @@ a:focus {
   border-right: 2em solid transparent;
   border-top: 1.5em solid #999;
 }
-/* line 152, ../_source/css/sass/_mootor.ui.scss */
+/* line 152, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .cleanbox {
   display: block;
   padding: 0.35em;
@@ -328,20 +337,20 @@ a:focus {
   font-weight: 700;
   text-decoration: none;
 }
-/* line 163, ../_source/css/sass/_mootor.ui.scss */
+/* line 163, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-radio {
   display: inline;
   float: right;
   position: relative;
   width: 75%;
 }
-/* line 167, ../_source/css/sass/_mootor.ui.scss */
+/* line 167, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-radio input {
   position: absolute;
   top: 0.5em;
   left: 0.5em;
 }
-/* line 172, ../_source/css/sass/_mootor.ui.scss */
+/* line 172, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-radio label {
   position: relative;
   display: block;
@@ -349,7 +358,7 @@ a:focus {
   background: #FFF;
   font-size: 1.4em;
 }
-/* line 178, ../_source/css/sass/_mootor.ui.scss */
+/* line 178, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-radio label .moo-ui-radio-icon {
   display: block;
   position: absolute;
@@ -361,11 +370,11 @@ a:focus {
   width: 1em;
   height: 1em;
 }
-/* line 188, ../_source/css/sass/_mootor.ui.scss */
+/* line 188, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-radio label .moo-ui-radio-icon.moo-radio-active {
-  background-color: #A6C9FD;
+  background-color: #666;
 }
-/* line 190, ../_source/css/sass/_mootor.ui.scss */
+/* line 190, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-radio label .moo-ui-radio-icon.moo-radio-active:after {
   content: " ";
   display: block;
@@ -385,20 +394,20 @@ a:focus {
   width: 0.6em;
   height: 0.6em;
 }
-/* line 206, ../_source/css/sass/_mootor.ui.scss */
+/* line 206, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-checkbox {
   display: inline;
   float: right;
   position: relative;
   width: 75%;
 }
-/* line 210, ../_source/css/sass/_mootor.ui.scss */
+/* line 210, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-checkbox input {
   position: absolute;
   top: 0.5em;
   left: 0.5em;
 }
-/* line 215, ../_source/css/sass/_mootor.ui.scss */
+/* line 215, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-checkbox label {
   position: relative;
   display: block;
@@ -406,7 +415,7 @@ a:focus {
   background: #FFF;
   font-size: 1.4em;
 }
-/* line 221, ../_source/css/sass/_mootor.ui.scss */
+/* line 221, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-checkbox label .moo-ui-checkbox-icon {
   display: block;
   position: absolute;
@@ -417,11 +426,11 @@ a:focus {
   width: 1em;
   height: 1em;
 }
-/* line 230, ../_source/css/sass/_mootor.ui.scss */
+/* line 230, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-checkbox label .moo-ui-checkbox-icon.moo-checkbox-active {
-  background-color: #72AAFB;
+  background-color: #666;
 }
-/* line 232, ../_source/css/sass/_mootor.ui.scss */
+/* line 232, src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-checkbox label .moo-ui-checkbox-icon.moo-checkbox-active:after {
   content: " ";
   display: block;
@@ -441,7 +450,7 @@ a:focus {
   height: 0.6em;
 }
 
-/* line 252, ../_source/css/sass/_mootor.ui.scss */
+/* line 252, src/_mootor/_mootor.ui.scss */
 .moo_checkbox {
   display: block;
   height: 28px;
@@ -449,7 +458,7 @@ a:focus {
   overflow: hidden;
   float: right;
 }
-/* line 259, ../_source/css/sass/_mootor.ui.scss */
+/* line 259, src/_mootor/_mootor.ui.scss */
 .moo_checkbox b {
   -webkit-transition-duration: .25s;
   background: url(../img/ui/switch.png);
@@ -458,16 +467,16 @@ a:focus {
   display: block;
   -webkit-transform: translate3d(0, 0, 0);
 }
-/* line 268, ../_source/css/sass/_mootor.ui.scss */
+/* line 268, src/_mootor/_mootor.ui.scss */
 .moo_checkbox.off b {
   -webkit-transform: translate3d(-54px, 0, 0);
 }
-/* line 271, ../_source/css/sass/_mootor.ui.scss */
+/* line 271, src/_mootor/_mootor.ui.scss */
 .moo_checkbox label {
   line-height: 28px;
 }
 
-/* line 277, ../_source/css/sass/_mootor.ui.scss */
+/* line 277, src/_mootor/_mootor.ui.scss */
 .moo_tooltip {
   position: absolute;
   line-height: 140%;
@@ -498,10 +507,9 @@ body {
   font-family: Helvetica, Arial, sans-serif;
   font-size: 62.5%;
   text-align: center;
-  background: #000;
 }
 
-/* line 41, src/styles.scss */
+/* line 40, src/styles.scss */
 h1 {
   line-height: 140%;
   font-size: 2.3em;
@@ -510,20 +518,20 @@ h1 {
   letter-spacing: -0.07em;
 }
 
-/* line 48, src/styles.scss */
+/* line 47, src/styles.scss */
 h2 {
   line-height: 140%;
   font-size: 7em;
   letter-spacing: -0.1em;
 }
 
-/* line 52, src/styles.scss */
+/* line 51, src/styles.scss */
 h3 {
   line-height: 140%;
   font-size: 3em;
 }
 
-/* line 57, src/styles.scss */
+/* line 56, src/styles.scss */
 p {
   line-height: 140%;
   font-size: 3em;
@@ -534,12 +542,12 @@ p {
   letter-spacing: 0;
 }
 
-/* line 64, src/styles.scss */
+/* line 63, src/styles.scss */
 .moo-panel {
   background: #f7f7f7;
 }
 
-/* line 68, src/styles.scss */
+/* line 67, src/styles.scss */
 .moo-header {
   box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.1);
   color: white;
@@ -547,7 +555,7 @@ p {
   background: #333333;
   border: 1px solid #333333;
 }
-/* line 74, src/styles.scss */
+/* line 73, src/styles.scss */
 .moo-header nav a {
   color: white;
   border: 0;
@@ -562,7 +570,7 @@ p {
   -moz-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
 }
-/* line 82, src/styles.scss */
+/* line 81, src/styles.scss */
 .moo-header h1 {
   line-height: 140%;
   font-size: 2.3em;
@@ -571,7 +579,7 @@ p {
   letter-spacing: -0.07em;
 }
 
-/* line 90, src/styles.scss */
+/* line 89, src/styles.scss */
 nav a {
   font-size: 3em;
   color: black;
@@ -580,7 +588,7 @@ nav a {
   border-top: 1px solid #dddddd;
 }
 
-/* line 98, src/styles.scss */
+/* line 97, src/styles.scss */
 .moo-nav.active {
   background: #29a6f7;
   color: white;
