--- a/_source/css/sass/_mootor.nav.scss
+++ b/_source/css/sass/_mootor.nav.scss
@@ -12,15 +12,19 @@
     text-decoration: none ;
 }
 
-body {
+body, html {
     height: 100%;
+    background: #ff0000;
+    overflow-x: hidden;
+    max-width: 100%;
+    width: 100%;
 }
 
 // Header
 
 .moo-header {
     text-align: left;
-    z-index: 9999;
+    z-index: 9999; 
     position: fixed;
     top:0;
     width: 100%;
@@ -45,6 +49,11 @@ body {
     width: 100%;
     left: 0;
     min-height: 100%;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: #0000ff;
+
     .moo-panel {
         min-height: 100%;
         width: 100%;
