--- a/css/src/styles.scss
+++ b/css/src/styles.scss
@@ -13,8 +13,8 @@ $readable-font: 'Palatino Linotype', 'Book Antiqua', Palatino, 'Droid Serif', se
 @import "compass/utilities" ;
 @import "text";
 @import "colors";
-@import "../../_source/css/sass/_mootor.nav.scss";
-@import "../../_source/css/sass/_mootor.ui.scss";
+@import "_mootor/_mootor.nav.scss";
+@import "_mootor/_mootor.ui.scss";
 
 // Clearfix
 /* For modern browsers */
@@ -35,7 +35,6 @@ body {
    font-family: $base-font; 
    font-size: $base-font-size;
    text-align: center ;
-   background: #000;
 }
 
 h1 {
