--- a/css/src/styles.scss
+++ b/css/src/styles.scss
@@ -8,9 +8,10 @@ $readable-font: 'Palatino Linotype', 'Book Antiqua', Palatino, 'Droid Serif', se
 
 // Imports
 
-@import "compass/reset" ;
+
 @import "compass/css3" ;
 @import "compass/utilities" ;
+@import "reset" ;
 @import "text";
 @import "colors";
 @import "../../_source/css/sass/_mootor.nav.scss";
