--- a/css/styles.css
+++ b/css/styles.css
@@ -1,66 +1,249 @@
-/* line 17, ../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+/* -----------------------------------------------------------------------------------------
+
+--------------------------------------------------------------------------------------------*/
+/*
+ * Addresses margins/padding handled incorrectly 
+ */
+/* line 8, src/_reset.scss */
+html,
+body {
   margin: 0;
   padding: 0;
   border: 0;
-  font: inherit;
-  font-size: 100%;
+}
+
+/*
+ * Corrects block display not defined in Android 2.1, iOS 3.2, Opera Mini
+ */
+/* line 28, src/_reset.scss */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+nav,
+section,
+summary {
+  display: block;
+}
+
+/*
+ * Addresses font-family inconsistency between 'textarea' and other form elements.
+ */
+/* line 41, src/_reset.scss */
+html,
+button,
+input,
+select,
+textarea {
+  font-family: sans-serif;
+}
+
+/* =============================================================================
+   Typography
+   ========================================================================== */
+/*
+ * Addresses font sizes and margins set differently in IE6/7
+ */
+/* line 54, src/_reset.scss */
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+/* line 59, src/_reset.scss */
+h2 {
+  font-size: 1.5em;
+  margin: 0.83em 0;
+}
+
+/* line 64, src/_reset.scss */
+h3 {
+  font-size: 1.17em;
+  margin: 1em 0;
+}
+
+/* line 69, src/_reset.scss */
+h4 {
+  font-size: 1em;
+  margin: 1.33em 0;
+}
+
+/* line 74, src/_reset.scss */
+h5 {
+  font-size: 0.83em;
+  margin: 1.67em 0;
+}
+
+/* line 79, src/_reset.scss */
+h6 {
+  font-size: 0.75em;
+  margin: 2.33em 0;
+}
+
+/* line 84, src/_reset.scss */
+small {
+  font-size: 75%;
+}
+
+/*
+ * Prevents sub and sup affecting line-height in all browsers
+ * gist.github.com/413930
+ */
+/* line 94, src/_reset.scss */
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-html {
-  line-height: 1;
+/* line 101, src/_reset.scss */
+sup {
+  top: -0.5em;
 }
 
-/* line 24, ../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-ol, ul {
-  list-style: none;
+/* line 105, src/_reset.scss */
+sub {
+  bottom: -0.25em;
 }
 
-/* line 26, ../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* =============================================================================
+   Forms
+   ========================================================================== */
+/*
+ * Corrects margin displayed oddly in IE6/7
+ */
+/* line 117, src/_reset.scss */
+form {
+  margin: 0;
+}
+
+/*
+ * Define consistent border, margin, and padding
+ */
+/* line 125, src/_reset.scss */
+fieldset {
+  border: 1px solid #c0c0c0;
+  margin: 0 2px;
+  padding: 0.35em 0.625em 0.75em;
+}
+
+/*
+ * 1. Corrects color not being inherited in IE6/7/8/9
+ * 2. Corrects text not wrapping in FF3
+ * 3. Corrects alignment displayed oddly in IE6/7
+ */
+/* line 137, src/_reset.scss */
+legend {
+  border: 0;
+  /* 1 */
+  padding: 0;
+  white-space: normal;
+  /* 2 */
+  *margin-left: -7px;
+  /* 3 */
+}
+
+/*
+ * 1. Corrects font size not being inherited in all browsers
+ * 2. Addresses margins set differently in IE6/7, FF3+, S5, Chrome
+ * 3. Improves appearance and consistency in all browsers
+ */
+/* line 153, src/_reset.scss */
+button,
+input,
+select,
+textarea {
+  font-size: 100%;
+  /* 1 */
+  margin: 0;
+  /* 2 */
+  vertical-align: baseline;
+  /* 3 */
+  *vertical-align: middle;
+  /* 3 */
+}
+
+/*
+ * Addresses FF3/4 setting line-height on 'input' using !important in the UA stylesheet
+ */
+/* line 165, src/_reset.scss */
+button,
+input {
+  line-height: normal;
+  /* 1 */
+}
+
+/*
+ * 1. Improves usability and consistency of cursor style between image-type 'input' and others
+ * 2. Corrects inability to style clickable 'input' types in iOS
+ */
+/* line 177, src/_reset.scss */
+button,
+input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+  cursor: pointer;
+  /* 1 */
+  -webkit-appearance: button;
+  /* 2 */
+}
+
+/*
+ * Re-set default cursor for disabled elements
+ */
+/* line 186, src/_reset.scss */
+button[disabled],
+input[disabled] {
+  cursor: default;
+}
+
+/*
+ * 1. Addresses appearance set to searchfield in S5, Chrome
+ * 2. Addresses box-sizing set to border-box in S5, Chrome (include -moz to future-proof)
+ */
+/* line 195, src/_reset.scss */
+input[type="search"] {
+  -webkit-appearance: textfield;
+  /* 1 */
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  /* 2 */
+  box-sizing: content-box;
+}
+
+/*
+ * Removes inner padding and search cancel button in S5, Chrome on OS X
+ */
+/* line 207, src/_reset.scss */
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+}
+
+/*
+ * 2. Improves readability and alignment in all browsers
+ */
+/* line 215, src/_reset.scss */
+textarea {
+  vertical-align: top;
+}
+
+/* =============================================================================
+   Tables
+   ========================================================================== */
+/*
+ * Remove most spacing between table cells
+ */
+/* line 228, src/_reset.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
-}
-
-/* line 28, ../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-caption, th, td {
-  text-align: left;
-  font-weight: normal;
-  vertical-align: middle;
-}
-
-/* line 30, ../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-q, blockquote {
-  quotes: none;
-}
-/* line 103, ../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-q:before, q:after, blockquote:before, blockquote:after {
-  content: "";
-  content: none;
-}
-
-/* line 32, ../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-a img {
-  border: none;
-}
-
-/* line 116, ../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
-  display: block;
 }
 
 /* 
@@ -493,7 +676,7 @@ a:focus {
 }
 
 /* For modern browsers */
-/* line 22, src/styles.scss */
+/* line 23, src/styles.scss */
 .clearfix:before, .moo-ui-form:before, .moo-ui-form .moo-field:before,
 .clearfix:after,
 .moo-ui-form:after,
@@ -502,12 +685,12 @@ a:focus {
   display: table;
 }
 
-/* line 27, src/styles.scss */
+/* line 28, src/styles.scss */
 .clearfix:after, .moo-ui-form:after, .moo-ui-form .moo-field:after {
   clear: both;
 }
 
-/* line 34, src/styles.scss */
+/* line 35, src/styles.scss */
 body {
   font-family: Helvetica, Arial, sans-serif;
   font-size: 62.5%;
@@ -515,7 +698,7 @@ body {
   background: #000;
 }
 
-/* line 41, src/styles.scss */
+/* line 42, src/styles.scss */
 h1 {
   line-height: 140%;
   font-size: 2.3em;
@@ -524,20 +707,20 @@ h1 {
   letter-spacing: -0.07em;
 }
 
-/* line 48, src/styles.scss */
+/* line 49, src/styles.scss */
 h2 {
   line-height: 140%;
   font-size: 7em;
   letter-spacing: -0.1em;
 }
 
-/* line 52, src/styles.scss */
+/* line 53, src/styles.scss */
 h3 {
   line-height: 140%;
   font-size: 3em;
 }
 
-/* line 57, src/styles.scss */
+/* line 58, src/styles.scss */
 p {
   line-height: 140%;
   font-size: 3em;
@@ -548,12 +731,12 @@ p {
   letter-spacing: 0;
 }
 
-/* line 64, src/styles.scss */
+/* line 65, src/styles.scss */
 .moo-panel {
   background: #f7f7f7;
 }
 
-/* line 68, src/styles.scss */
+/* line 69, src/styles.scss */
 .moo-header {
   box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.1);
   color: white;
@@ -561,7 +744,7 @@ p {
   background: #333333;
   border: 1px solid #333333;
 }
-/* line 74, src/styles.scss */
+/* line 75, src/styles.scss */
 .moo-header nav a {
   color: white;
   border: 0;
@@ -576,7 +759,7 @@ p {
   -moz-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
 }
-/* line 82, src/styles.scss */
+/* line 83, src/styles.scss */
 .moo-header h1 {
   line-height: 140%;
   font-size: 2.3em;
@@ -585,7 +768,7 @@ p {
   letter-spacing: -0.07em;
 }
 
-/* line 90, src/styles.scss */
+/* line 91, src/styles.scss */
 nav a {
   font-size: 3em;
   color: black;
@@ -594,7 +777,7 @@ nav a {
   border-top: 1px solid #dddddd;
 }
 
-/* line 98, src/styles.scss */
+/* line 99, src/styles.scss */
 .moo-nav.active {
   background: #29a6f7;
   color: white;
