--- a/css/src/_reset.scss
+++ b/css/src/_reset.scss
@@ -1,5 +1,5 @@
 /* -----------------------------------------------------------------------------------------
-    Base 
+ 
 --------------------------------------------------------------------------------------------*/
 /* =============================================================================
    Base
@@ -52,7 +52,7 @@ textarea {
    ========================================================================== */
 
 /*
- * Addresses font sizes and margins set differently in IE6/7
+ * Addresses font sizes and margins
  */
 
 h1 {
@@ -114,7 +114,6 @@ sub {
    Forms
    ========================================================================== */
 
-
 /*
  * Define consistent border, margin, and padding
  */
@@ -125,30 +124,6 @@ fieldset {
     padding: 0.35em 0.625em 0.75em;
 }
 
-/*
- * 1. Corrects font size not being inherited in all browsers
- * 2. Addresses margins set differently in IE6/7, FF3+, S5, Chrome
- * 3. Improves appearance and consistency in all browsers
- */
-
-button,
-input,
-select,
-textarea {
-    font-size: 100%; /* 1 */
-    margin: 0; /* 2 */
-    vertical-align: baseline; /* 3 */
-    *vertical-align: middle; /* 3 */
-}
-
-/*
- * Addresses FF3/4 setting line-height on 'input' using !important in the UA stylesheet
- */
-
-button,
-input {
-    line-height: normal; /* 1 */
-}
 
 /*
  * 1. Improves usability and consistency of cursor style between image-type 'input' and others
@@ -169,18 +144,6 @@ input[type="submit"] {
 button[disabled],
 input[disabled] {
     cursor: default;
-}
-
-/*
- * 1. Addresses appearance set to searchfield in S5, Chrome
- * 2. Addresses box-sizing set to border-box in S5, Chrome (include -moz to future-proof)
- */
-
-input[type="search"] {
-    -webkit-appearance: textfield; /* 1 */
-    -moz-box-sizing: content-box;
-    -webkit-box-sizing: content-box; /* 2 */
-    box-sizing: content-box;
 }
 
 /*
