--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,13 @@
 /* -----------------------------------------------------------------------------------------
-
+ 
 --------------------------------------------------------------------------------------------*/
+/* =============================================================================
+   Base
+   ========================================================================== */
 /*
  * Addresses margins/padding handled incorrectly 
  */
-/* line 8, src/_reset.scss */
+/* line 12, src/_reset.scss */
 html,
 body {
   margin: 0;
@@ -15,7 +18,7 @@ body {
 /*
  * Corrects block display not defined in Android 2.1, iOS 3.2, Opera Mini
  */
-/* line 28, src/_reset.scss */
+/* line 32, src/_reset.scss */
 article,
 aside,
 details,
@@ -33,7 +36,7 @@ summary {
 /*
  * Addresses font-family inconsistency between 'textarea' and other form elements.
  */
-/* line 41, src/_reset.scss */
+/* line 45, src/_reset.scss */
 html,
 button,
 input,
@@ -46,45 +49,45 @@ textarea {
    Typography
    ========================================================================== */
 /*
- * Addresses font sizes and margins set differently in IE6/7
+ * Addresses font sizes and margins
  */
-/* line 54, src/_reset.scss */
+/* line 58, src/_reset.scss */
 h1 {
   font-size: 2em;
   margin: 0.67em 0;
 }
 
-/* line 59, src/_reset.scss */
+/* line 63, src/_reset.scss */
 h2 {
   font-size: 1.5em;
   margin: 0.83em 0;
 }
 
-/* line 64, src/_reset.scss */
+/* line 68, src/_reset.scss */
 h3 {
   font-size: 1.17em;
   margin: 1em 0;
 }
 
-/* line 69, src/_reset.scss */
+/* line 73, src/_reset.scss */
 h4 {
   font-size: 1em;
   margin: 1.33em 0;
 }
 
-/* line 74, src/_reset.scss */
+/* line 78, src/_reset.scss */
 h5 {
   font-size: 0.83em;
   margin: 1.67em 0;
 }
 
-/* line 79, src/_reset.scss */
+/* line 83, src/_reset.scss */
 h6 {
   font-size: 0.75em;
   margin: 2.33em 0;
 }
 
-/* line 84, src/_reset.scss */
+/* line 88, src/_reset.scss */
 small {
   font-size: 75%;
 }
@@ -93,7 +96,7 @@ small {
  * Prevents sub and sup affecting line-height in all browsers
  * gist.github.com/413930
  */
-/* line 94, src/_reset.scss */
+/* line 98, src/_reset.scss */
 sub,
 sup {
   font-size: 75%;
@@ -102,12 +105,12 @@ sup {
   vertical-align: baseline;
 }
 
-/* line 101, src/_reset.scss */
+/* line 105, src/_reset.scss */
 sup {
   top: -0.5em;
 }
 
-/* line 105, src/_reset.scss */
+/* line 109, src/_reset.scss */
 sub {
   bottom: -0.25em;
 }
@@ -116,17 +119,9 @@ sub {
    Forms
    ========================================================================== */
 /*
- * Corrects margin displayed oddly in IE6/7
- */
-/* line 117, src/_reset.scss */
-form {
-  margin: 0;
-}
-
-/*
  * Define consistent border, margin, and padding
  */
-/* line 125, src/_reset.scss */
+/* line 121, src/_reset.scss */
 fieldset {
   border: 1px solid #c0c0c0;
   margin: 0 2px;
@@ -134,56 +129,10 @@ fieldset {
 }
 
 /*
- * 1. Corrects color not being inherited in IE6/7/8/9
- * 2. Corrects text not wrapping in FF3
- * 3. Corrects alignment displayed oddly in IE6/7
- */
-/* line 137, src/_reset.scss */
-legend {
-  border: 0;
-  /* 1 */
-  padding: 0;
-  white-space: normal;
-  /* 2 */
-  *margin-left: -7px;
-  /* 3 */
-}
-
-/*
- * 1. Corrects font size not being inherited in all browsers
- * 2. Addresses margins set differently in IE6/7, FF3+, S5, Chrome
- * 3. Improves appearance and consistency in all browsers
- */
-/* line 153, src/_reset.scss */
-button,
-input,
-select,
-textarea {
-  font-size: 100%;
-  /* 1 */
-  margin: 0;
-  /* 2 */
-  vertical-align: baseline;
-  /* 3 */
-  *vertical-align: middle;
-  /* 3 */
-}
-
-/*
- * Addresses FF3/4 setting line-height on 'input' using !important in the UA stylesheet
- */
-/* line 165, src/_reset.scss */
-button,
-input {
-  line-height: normal;
-  /* 1 */
-}
-
-/*
  * 1. Improves usability and consistency of cursor style between image-type 'input' and others
  * 2. Corrects inability to style clickable 'input' types in iOS
  */
-/* line 177, src/_reset.scss */
+/* line 136, src/_reset.scss */
 button,
 input[type="button"],
 input[type="reset"],
@@ -197,30 +146,16 @@ input[type="submit"] {
 /*
  * Re-set default cursor for disabled elements
  */
-/* line 186, src/_reset.scss */
+/* line 145, src/_reset.scss */
 button[disabled],
 input[disabled] {
   cursor: default;
 }
 
 /*
- * 1. Addresses appearance set to searchfield in S5, Chrome
- * 2. Addresses box-sizing set to border-box in S5, Chrome (include -moz to future-proof)
- */
-/* line 195, src/_reset.scss */
-input[type="search"] {
-  -webkit-appearance: textfield;
-  /* 1 */
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box;
-  /* 2 */
-  box-sizing: content-box;
-}
-
-/*
  * Removes inner padding and search cancel button in S5, Chrome on OS X
  */
-/* line 207, src/_reset.scss */
+/* line 154, src/_reset.scss */
 input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button {
   -webkit-appearance: none;
@@ -229,7 +164,7 @@ input[type="search"]::-webkit-search-cancel-button {
 /*
  * 2. Improves readability and alignment in all browsers
  */
-/* line 215, src/_reset.scss */
+/* line 162, src/_reset.scss */
 textarea {
   vertical-align: top;
 }
@@ -240,7 +175,7 @@ textarea {
 /*
  * Remove most spacing between table cells
  */
-/* line 228, src/_reset.scss */
+/* line 175, src/_reset.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
