--- a/src/styles.css
+++ b/src/styles.css
@@ -70,14 +70,14 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
  * Useful for the padding does not change the height of the elements
  *
  */
-/* line 7, src/_mootor/_mootor.nav.scss */
+/* line 7, ../css/src/_mootor/_mootor.nav.scss */
 * {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-/* line 15, src/_mootor/_mootor.nav.scss */
+/* line 15, ../css/src/_mootor/_mootor.nav.scss */
 body, html {
   height: 100%;
   background: #ff0000;
@@ -88,7 +88,7 @@ body, html {
   max-height: 100%;
 }
 
-/* line 27, src/_mootor/_mootor.nav.scss */
+/* line 27, ../css/src/_mootor/_mootor.nav.scss */
 .moo-header {
   text-align: left;
   z-index: 9999;
@@ -97,13 +97,13 @@ body, html {
   width: 100%;
   padding: 1em 1em;
 }
-/* line 34, src/_mootor/_mootor.nav.scss */
+/* line 34, ../css/src/_mootor/_mootor.nav.scss */
 .moo-header nav {
   position: absolute;
   margin-top: 0;
   top: 1.6em;
 }
-/* line 39, src/_mootor/_mootor.nav.scss */
+/* line 39, ../css/src/_mootor/_mootor.nav.scss */
 .moo-header nav a {
   padding: .5em 1em;
   width: auto;
@@ -111,7 +111,7 @@ body, html {
   font-size: 1.5em;
 }
 
-/* line 49, src/_mootor/_mootor.nav.scss */
+/* line 49, ../css/src/_mootor/_mootor.nav.scss */
 #panels {
   position: absolute;
   width: 100%;
@@ -122,19 +122,19 @@ body, html {
   bottom: 0;
   background: #0000ff;
 }
-/* line 59, src/_mootor/_mootor.nav.scss */
+/* line 59, ../css/src/_mootor/_mootor.nav.scss */
 #panels .moo-panel {
   min-height: 100%;
   width: 100%;
   position: absolute;
 }
 
-/* line 71, src/_mootor/_mootor.nav.scss */
+/* line 71, ../css/src/_mootor/_mootor.nav.scss */
 nav ul,
 nav ol {
   list-style: none;
 }
-/* line 75, src/_mootor/_mootor.nav.scss */
+/* line 75, ../css/src/_mootor/_mootor.nav.scss */
 nav a {
   text-decoration: none;
   text-align: left;
@@ -142,20 +142,20 @@ nav a {
   padding: 1em;
 }
 
-/* line 85, src/_mootor/_mootor.nav.scss */
+/* line 85, ../css/src/_mootor/_mootor.nav.scss */
 #panels .moo-panel {
   -webkit-transition-duration: 0;
   -webkit-transform: translate3d(0, 0, 0);
 }
 
-/* line 93, src/_mootor/_mootor.nav.scss */
+/* line 93, ../css/src/_mootor/_mootor.nav.scss */
 a,
 a:hover,
 a:focus {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
-/* line 4, src/_mootor/_mootor.ui.scss */
+/* line 4, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form {
   text-align: left;
   width: 90%;
@@ -164,17 +164,17 @@ a:focus {
   border: 1px solid #CCC;
   border-radius: 5px;
 }
-/* line 12, src/_mootor/_mootor.ui.scss */
+/* line 12, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-field {
   display: block;
   padding: 1em 2em;
   border-top: 1px solid #CCC;
 }
-/* line 17, src/_mootor/_mootor.ui.scss */
+/* line 17, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-field:first-child {
   border-top: none;
 }
-/* line 18, src/_mootor/_mootor.ui.scss */
+/* line 18, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-field > label, .moo-ui-form .moo-field legend {
   display: inline;
   float: left;
@@ -182,7 +182,7 @@ a:focus {
   font-weight: 700;
   width: 25%;
 }
-/* line 25, src/_mootor/_mootor.ui.scss */
+/* line 25, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-text {
   display: inline;
   float: right;
@@ -193,7 +193,7 @@ a:focus {
   padding: 0.25em 2.25em 0.25em 0.25em;
   width: 75%;
 }
-/* line 33, src/_mootor/_mootor.ui.scss */
+/* line 33, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-text input {
   -webkit-appearance: none;
   /* Remove default iOS shadow */
@@ -203,7 +203,7 @@ a:focus {
   line-height: 1.5em;
   width: 100%;
 }
-/* line 42, src/_mootor/_mootor.ui.scss */
+/* line 42, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-textarea {
   display: inline;
   float: right;
@@ -214,7 +214,7 @@ a:focus {
   padding: 0.25em;
   width: 75%;
 }
-/* line 50, src/_mootor/_mootor.ui.scss */
+/* line 50, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-textarea textarea {
   -webkit-appearance: none;
   /* Remove default iOS shadow */
@@ -224,7 +224,7 @@ a:focus {
   line-height: 1.5em;
   width: 100%;
 }
-/* line 60, src/_mootor/_mootor.ui.scss */
+/* line 60, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container {
   display: inline;
   float: right;
@@ -237,7 +237,7 @@ a:focus {
   height: 3em;
   z-index: 300;
 }
-/* line 70, src/_mootor/_mootor.ui.scss */
+/* line 70, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container .moo-ui-select-link {
   color: #000;
   font-size: 1.25em;
@@ -251,7 +251,7 @@ a:focus {
   right: 0;
   z-index: 10;
 }
-/* line 82, src/_mootor/_mootor.ui.scss */
+/* line 82, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container .moo-ui-select-link:after {
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(100%, #cccccc));
   background: -webkit-linear-gradient(top, #ffffff, #cccccc);
@@ -273,7 +273,7 @@ a:focus {
   height: 2.25em;
   z-index: -1;
 }
-/* line 99, src/_mootor/_mootor.ui.scss */
+/* line 99, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container .moo-ui-select-menu {
   display: none;
   background-color: #999;
@@ -281,24 +281,24 @@ a:focus {
   padding: 1em;
   position: absolute;
 }
-/* line 106, src/_mootor/_mootor.ui.scss */
+/* line 106, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container .moo-ui-select-list {
   font-size: 2em;
   background: #FFF;
   border-radius: 5px;
   overflow-y: scroll;
 }
-/* line 112, src/_mootor/_mootor.ui.scss */
+/* line 112, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container .moo-ui-select-list li {
   padding: 1em;
   border-bottom: 1px solid #CCC;
   white-space: nowrap;
 }
-/* line 116, src/_mootor/_mootor.ui.scss */
+/* line 116, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container .moo-ui-select-list li:last-child {
   border: none;
 }
-/* line 117, src/_mootor/_mootor.ui.scss */
+/* line 117, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container .moo-ui-select-list li.selected {
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #daeaec), color-stop(100%, #cee3e6));
   background: -webkit-linear-gradient(top, #daeaec, #cee3e6);
@@ -310,11 +310,11 @@ a:focus {
   border-bottom-color: #AEBBBD;
   color: #3F8D94;
 }
-/* line 126, src/_mootor/_mootor.ui.scss */
+/* line 126, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container.bottom .moo-ui-select-menu {
   top: 4.5em;
 }
-/* line 128, src/_mootor/_mootor.ui.scss */
+/* line 128, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container.bottom .moo-ui-select-menu:before {
   content: "";
   display: block;
@@ -326,11 +326,11 @@ a:focus {
   border-right: 20px solid transparent;
   border-bottom: 15px solid #999;
 }
-/* line 142, src/_mootor/_mootor.ui.scss */
+/* line 142, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container.top .moo-ui-select-menu {
   bottom: 4.5em;
 }
-/* line 144, src/_mootor/_mootor.ui.scss */
+/* line 144, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container.top .moo-ui-select-menu:after {
   content: "";
   display: block;
@@ -342,7 +342,7 @@ a:focus {
   border-right: 2em solid transparent;
   border-top: 1.5em solid #999;
 }
-/* line 158, src/_mootor/_mootor.ui.scss */
+/* line 158, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .cleanbox {
   display: block;
   padding: 0.35em;
@@ -354,20 +354,20 @@ a:focus {
   font-weight: 700;
   text-decoration: none;
 }
-/* line 169, src/_mootor/_mootor.ui.scss */
+/* line 169, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-radio {
   display: inline;
   float: right;
   position: relative;
   width: 75%;
 }
-/* line 173, src/_mootor/_mootor.ui.scss */
+/* line 173, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-radio input {
   position: absolute;
   top: 0.5em;
   left: 0.5em;
 }
-/* line 178, src/_mootor/_mootor.ui.scss */
+/* line 178, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-radio label {
   position: relative;
   display: block;
@@ -375,7 +375,7 @@ a:focus {
   background: #FFF;
   font-size: 1.4em;
 }
-/* line 184, src/_mootor/_mootor.ui.scss */
+/* line 184, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-radio label .moo-ui-radio-icon {
   display: block;
   position: absolute;
@@ -387,11 +387,11 @@ a:focus {
   width: 1em;
   height: 1em;
 }
-/* line 194, src/_mootor/_mootor.ui.scss */
+/* line 194, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-radio label .moo-ui-radio-icon.moo-radio-active {
   background-color: #666;
 }
-/* line 196, src/_mootor/_mootor.ui.scss */
+/* line 196, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-radio label .moo-ui-radio-icon.moo-radio-active:after {
   content: " ";
   display: block;
@@ -411,20 +411,20 @@ a:focus {
   width: 0.6em;
   height: 0.6em;
 }
-/* line 212, src/_mootor/_mootor.ui.scss */
+/* line 212, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-checkbox {
   display: inline;
   float: right;
   position: relative;
   width: 75%;
 }
-/* line 216, src/_mootor/_mootor.ui.scss */
+/* line 216, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-checkbox input {
   position: absolute;
   top: 0.5em;
   left: 0.5em;
 }
-/* line 221, src/_mootor/_mootor.ui.scss */
+/* line 221, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-checkbox label {
   position: relative;
   display: block;
@@ -432,7 +432,7 @@ a:focus {
   background: #FFF;
   font-size: 1.4em;
 }
-/* line 227, src/_mootor/_mootor.ui.scss */
+/* line 227, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-checkbox label .moo-ui-checkbox-icon {
   display: block;
   position: absolute;
@@ -443,11 +443,11 @@ a:focus {
   width: 1em;
   height: 1em;
 }
-/* line 236, src/_mootor/_mootor.ui.scss */
+/* line 236, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-checkbox label .moo-ui-checkbox-icon.moo-checkbox-active {
   background-color: #666;
 }
-/* line 238, src/_mootor/_mootor.ui.scss */
+/* line 238, ../css/src/_mootor/_mootor.ui.scss */
 .moo-ui-form .moo-ui-checkbox label .moo-ui-checkbox-icon.moo-checkbox-active:after {
   content: " ";
   display: block;
@@ -467,7 +467,7 @@ a:focus {
   height: 0.6em;
 }
 
-/* line 258, src/_mootor/_mootor.ui.scss */
+/* line 258, ../css/src/_mootor/_mootor.ui.scss */
 .moo_checkbox {
   display: block;
   height: 28px;
@@ -475,7 +475,7 @@ a:focus {
   overflow: hidden;
   float: right;
 }
-/* line 265, src/_mootor/_mootor.ui.scss */
+/* line 265, ../css/src/_mootor/_mootor.ui.scss */
 .moo_checkbox b {
   -webkit-transition-duration: .25s;
   background: url(../img/ui/switch.png);
@@ -484,16 +484,16 @@ a:focus {
   display: block;
   -webkit-transform: translate3d(0, 0, 0);
 }
-/* line 274, src/_mootor/_mootor.ui.scss */
+/* line 274, ../css/src/_mootor/_mootor.ui.scss */
 .moo_checkbox.off b {
   -webkit-transform: translate3d(-54px, 0, 0);
 }
-/* line 277, src/_mootor/_mootor.ui.scss */
+/* line 277, ../css/src/_mootor/_mootor.ui.scss */
 .moo_checkbox label {
   line-height: 28px;
 }
 
-/* line 283, src/_mootor/_mootor.ui.scss */
+/* line 283, ../css/src/_mootor/_mootor.ui.scss */
 .moo_tooltip {
   position: absolute;
   line-height: 140%;
@@ -505,7 +505,7 @@ a:focus {
 }
 
 /* For modern browsers */
-/* line 22, src/styles.scss */
+/* line 22, ../css/src/styles.scss */
 .clearfix:before, .moo-ui-form:before, .moo-ui-form .moo-field:before,
 .clearfix:after,
 .moo-ui-form:after,
@@ -514,19 +514,19 @@ a:focus {
   display: table;
 }
 
-/* line 27, src/styles.scss */
+/* line 27, ../css/src/styles.scss */
 .clearfix:after, .moo-ui-form:after, .moo-ui-form .moo-field:after {
   clear: both;
 }
 
-/* line 34, src/styles.scss */
+/* line 34, ../css/src/styles.scss */
 body {
   font-family: Helvetica, Arial, sans-serif;
   font-size: 62.5%;
   text-align: center;
 }
 
-/* line 40, src/styles.scss */
+/* line 40, ../css/src/styles.scss */
 h1 {
   line-height: 140%;
   font-size: 2.3em;
@@ -535,20 +535,20 @@ h1 {
   letter-spacing: -0.07em;
 }
 
-/* line 47, src/styles.scss */
+/* line 47, ../css/src/styles.scss */
 h2 {
   line-height: 140%;
   font-size: 7em;
   letter-spacing: -0.1em;
 }
 
-/* line 51, src/styles.scss */
+/* line 51, ../css/src/styles.scss */
 h3 {
   line-height: 140%;
   font-size: 3em;
 }
 
-/* line 56, src/styles.scss */
+/* line 56, ../css/src/styles.scss */
 p {
   line-height: 140%;
   font-size: 3em;
@@ -559,20 +559,21 @@ p {
   letter-spacing: 0;
 }
 
-/* line 63, src/styles.scss */
+/* line 63, ../css/src/styles.scss */
 .moo-panel {
   background: #f7f7f7;
 }
 
-/* line 67, src/styles.scss */
+/* line 67, ../css/src/styles.scss */
 .moo-header {
   box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.1);
   color: white;
   font-weight: bold;
   background: rgba(0, 0, 0, 0.5);
+  /*$domColor1B;*/
   border: 1px solid #333333;
 }
-/* line 73, src/styles.scss */
+/* line 73, ../css/src/styles.scss */
 .moo-header nav a {
   color: white;
   border: 0;
@@ -587,7 +588,7 @@ p {
   -moz-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
 }
-/* line 81, src/styles.scss */
+/* line 81, ../css/src/styles.scss */
 .moo-header h1 {
   line-height: 140%;
   font-size: 2.3em;
@@ -596,7 +597,7 @@ p {
   letter-spacing: -0.07em;
 }
 
-/* line 89, src/styles.scss */
+/* line 89, ../css/src/styles.scss */
 nav a {
   font-size: 3em;
   color: black;
@@ -605,7 +606,7 @@ nav a {
   border-top: 1px solid #dddddd;
 }
 
-/* line 97, src/styles.scss */
+/* line 97, ../css/src/styles.scss */
 .moo-nav.active {
   background: #29a6f7;
   color: white;
